--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,10 @@ extends layout
 
 block content
   h1= title
-  p Bienvenue sur #{title}
+  p Welcome on #{title}
+
+  h2
+    a(href="/users") See All Users
+
+  h2
+    a(href="/todos") See All Todos
