--- a/views/users/edit.pug
+++ b/views/users/edit.pug
@@ -1,30 +1,57 @@
 extends ../layout
 
 block content
-  h1= title
+	- user = user
+	if user
+		h1 Modifier l'utilisateur
+	else
+		h1 Nouvel utilisateur
+	- warning = warning
+	if warning
+		p Veuillez remplir tous les champs
+	- taken = taken
+	if taken
+		p Pseudo déjà pris
+	form(method="post", action= action)
+		div
+			label(for="pseudo") Pseudo :
+			div
+				if user
+					input(type="text", name="pseudo", value= user[0].pseudo)
+				else
+					input(type="text", name="pseudo")
+		div
+			label(for="pwd") Password :
+			div
+				if user
+					input(type="password", name="pwd", placeholder="Vide ou nouveau pwd")
+				else
+					input(type="password", name="pwd")
 
-  p Editer l'utilisateur :
+		div
+			label(for="email") Email:
+			div
+				if user
+					input(type="text", name="email", value= user[0].email)
+				else
+					input(type="mail", name="email")
 
-  form(action=action method='post')
-    table(border=1)
-      tr
-        th Id
-        td= user.rowid
-      tr
-        th Pseudo
-        td
-          input(name='pseudo' value=user.pseudo)
-      tr
-        th Password
-        td
-          input(name='password' value=user.password)
-      tr
-        th Prénom
-        td
-          input(name='firstname' value=user.firstname)
-      tr
-        th Email
-        td
-          input(name='email' value=user.email)
+		div
+			label(for="firstname") Firstname :
+			div
+				if user
+					input(type="text", name="firstname", value= user[0].firstname, class="form-control")
+				else
+					input(type="text", name="firstname", class="form-control")
 
-    input(type='submit', value='Envoyer')
+		div
+			label(for="lastname") Lastname :
+			div
+				if user
+					input(type="text", name="lastname", value= user[0].lastname)
+				else
+					input(type="text", name="lastname")
+		div
+			div
+				p
+				input(type="submit", value="Register")
