--- a/views/teams/edit.pug
+++ b/views/teams/edit.pug
@@ -14,6 +14,6 @@ block content
 			div
 				input(type="text", name="teamName")
 		div.form-group
-			div(
+			div
 				p
 				input(type="submit", value="Enregistrer")
