--- a/views/teams/edit.pug
+++ b/views/teams/edit.pug
@@ -13,7 +13,7 @@ block content
 			label(for="teamName") Chose one team name :
 			div
 				input(type="text", name="teamName")
-		div.form-group
+		div
 			div
 				p
 				input(type="submit", value="Enregistrer")
