--- a/views/teams/showAll.pug
+++ b/views/teams/showAll.pug
@@ -28,5 +28,5 @@ block content
 				td
 					form(method="post", action= "/teams/"+team.teamId+"?_method=DELETE")
 						.buttons
-						input(type="submit", value="Supprimer")
+						input(type="submit", value="Delete")
 				
